--- a/main_app/static/client/index.html
+++ b/main_app/static/client/index.html
@@ -3,7 +3,7 @@
     <title>GaiaLabs</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/static/client/favicon.ico">
     <script>
         const USER ='{{ user | safe }}'
         const TOKEN ='{{ csrf_token }}'
